<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_dark"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/header_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/teamscore_a_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/team_a_score"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/team_a_points_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/center_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/teamscore_b_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/team_b_score"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/team_b_points_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/team_a_points_txt" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/fb_formation_img"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/header_section"
        app:layout_constraintEnd_toStartOf="@+id/center_guide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/football_qb" />


    <TextView
        android:id="@+id/team_a"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="24dp"
        android:text="@string/team_a"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="24sp"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toStartOf="@+id/center_guide"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_section" />

    <TextView
        android:id="@+id/team_b"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="24dp"
        android:text="@string/team_b"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/center_guide"
        app:layout_constraintTop_toTopOf="@+id/header_section" />

    <Button
        android:id="@+id/add_td_team_a"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:background="@color/accent"
        android:onClick="addTouchdownTeamA"
        android:text="@string/plus_six"
        app:layout_constraintBottom_toTopOf="@+id/add_fieldgoal_team_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/add_td_team_b"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/accent"
        android:text="@string/plus_six"
        android:onClick="addTouchdownTeamB"
        app:layout_constraintBaseline_toBaselineOf="@+id/td_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/td_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/td"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_td_team_a"
        app:layout_constraintEnd_toStartOf="@+id/add_td_team_b"
        app:layout_constraintStart_toEndOf="@+id/add_td_team_a" />

    <Button
        android:id="@+id/add_fieldgoal_team_a"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/accent"
        android:text="@string/plus_three"
        app:layout_constraintBottom_toTopOf="@+id/add_twoextra_team_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_td_team_a"
        android:onClick="addFieldGoalTeamA"/>

    <Button
        android:id="@+id/add_fieldgoal_team_b"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@color/accent"
        android:text="@string/plus_three"
        app:layout_constraintBaseline_toBaselineOf="@+id/field_goal_txt"
        app:layout_constraintEnd_toEndOf="@+id/add_td_team_b"
        android:onClick="addFieldGoalTeamB"/>

    <Button
        android:id="@+id/add_twoextra_team_a"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/accent"
        android:text="@string/plus_two"
        app:layout_constraintBottom_toTopOf="@+id/add_oneextra_team_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_fieldgoal_team_a" />

    <Button
        android:id="@+id/add_twoextra_team_b"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@color/accent"
        android:text="@string/plus_two"
        app:layout_constraintBottom_toBottomOf="@+id/two_extra_points_txt"
        app:layout_constraintEnd_toEndOf="@+id/add_fieldgoal_team_b"
        app:layout_constraintTop_toTopOf="@+id/two_extra_points_txt" />

    <TextView
        android:id="@+id/field_goal_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/field_goals"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/add_fieldgoal_team_a"
        app:layout_constraintEnd_toStartOf="@+id/add_fieldgoal_team_b"
        app:layout_constraintStart_toEndOf="@+id/add_fieldgoal_team_a" />

    <TextView
        android:id="@+id/two_extra_points_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/td_extra_point_txt"
        android:textAlignment="center"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="@+id/add_twoextra_team_a"
        app:layout_constraintEnd_toStartOf="@+id/add_twoextra_team_b"
        app:layout_constraintStart_toEndOf="@+id/add_twoextra_team_a"
        app:layout_constraintTop_toTopOf="@+id/add_twoextra_team_a" />

    <android.support.constraint.Guideline
        android:id="@+id/center_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <Button
        android:id="@+id/add_oneextra_team_a"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/accent"
        android:text="@string/plus_one"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toTopOf="@+id/above_reset_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_twoextra_team_a" />

    <Button
        android:id="@+id/add_oneextra_team_b"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@color/accent"
        android:text="@string/plus_one"
        app:layout_constraintBottom_toBottomOf="@+id/one_extra_points_txt"
        app:layout_constraintEnd_toEndOf="@+id/add_twoextra_team_b"
        app:layout_constraintTop_toTopOf="@+id/one_extra_points_txt" />

    <TextView
        android:id="@+id/one_extra_points_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/extra_kick_txt"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/add_oneextra_team_a"
        app:layout_constraintEnd_toStartOf="@+id/add_oneextra_team_b"
        app:layout_constraintStart_toEndOf="@+id/add_oneextra_team_a"
        app:layout_constraintTop_toTopOf="@+id/add_oneextra_team_a" />

    <android.support.constraint.Guideline
        android:id="@+id/above_reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:background="@color/accent"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/above_reset_btn"
        android:onClick="trackerReset"/>

    <android.support.constraint.Guideline
        android:id="@+id/header_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <TextView
        android:id="@+id/team_a_points_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"

        android:text="@string/start_score_zero"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/teamscore_b_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/center_guide"
        app:layout_constraintTop_toBottomOf="@+id/teamscore_a_txt" />

    <TextView
        android:id="@+id/team_b_points_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eight_dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/start_score_zero"
        android:textAlignment="center"
        android:textColor="@color/primary_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/header_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/center_guide"
        app:layout_constraintTop_toBottomOf="@+id/teamscore_b_txt" />

</android.support.constraint.ConstraintLayout>